# finOS

./: README.md
backend/: .env-example  .gitignore  Cargo.toml  Makefile  README.md
backend/rules/: trustbank.yml  wise.yml  youtrip.yml
backend/src/: app.rs  config.rs  db.rs  email_parser.rs  lib.rs  main.rs
backend/src/common/: api_response.rs  app_state.rs  db_conn.rs  mod.rs
backend/src/db/: conn.rs  email_repo.rs  mod.rs  receipt_repo.rs  user_repo.rs
backend/src/domain/: mod.rs  models.rs
backend/src/domain/auth/: handlers.rs  models.rs  repository.rs  routes.rs  service.rs
backend/src/domain/email/: handlers.rs  models.rs  repository.rs  routes.rs  service.rs
backend/src/domain/ingestor/: handlers.rs  models.rs  routes.rs  service.rs
backend/src/domain/receipt/: handler.rs  handlers.rs  models.rs  repository.rs  routes.rs  service.rs
backend/src/domain/user/: handler.rs  handlers.rs  models.rs  repository.rs  routes.rs  service.rs
backend/src/service/: email_service.rs  ingestor_service.rs  mod.rs  models.rs  parser.rs  receipt_service.rs  user_service.rs
frontend/: README.md  package-lock.json  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: FinosDataSphere.tsx  GraphHero.tsx  ProviderSolarSystem.tsx  graphNodes.ts
frontend/src/context/: currency-context.tsx  session-context.tsx  theme-context.tsx  theme-mode-context.tsx
frontend/src/hooks/: useReceipts.ts  useSession.ts  useSyncController.ts
frontend/src/lib/: analytics.ts  api.ts  config.ts  dates.ts  receipts.ts  sampleData.ts
frontend/src/types/: index.ts
(+23 files in other folders)
