[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
base64 = "0.22.1"
mail-parser = "0.11.1"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.225"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
yup-oauth2 = "12.1.0"

[dependencies.mongodb]
version = "3.3.0"