[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
base64 = "0.22.1"
dotenvy = "0.15.7"
mail-parser = "0.11.1"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
scraper = "0.24.0"
serde = "1.0.225"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
yup-oauth2 = "12.1.0"
ollama-rs = "0.3.2"
ego-tree = "0.10.0"

[dependencies.mongodb]
version = "3.3.0"
